<resources>
    <string name="app_name">TicketToRide</string>
    <string name="port">Port:</string>
    <string name="port_number">8000</string>
    <string name="password">Password</string>
    <string name="hint">password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="host">Host:</string>
    <string name="host_name">10.0.2.2</string>
    <string name="username">Username:</string>
    <string name="username_default">username</string>
    <string name="GameListTitle">The Following Games are Joinable</string>
    <string name="createButton_title">Create Game</string>
    <string name="lobby_title">Lobby Title</string>
    <string name="lobby_message_waiting">waiting for players…</string>
    <string name="lobby_message_starting">lobby full starting game…</string>
    <string name="player_max">0/5</string>
    <string name="create_game_button">Create Game</string>
    <string name="cancel_button">Cancel</string>
    <string name="player_num_default">2</string>
    <string name="number_of_players_title">Number of Players (2-5):</string>
    <string name="game_name_default">myGame</string>
    <string name="game_name_title">Game Name:</string>
    <string name="the_backgroud_map">The Backgroud Map</string>
    <string name="route">route</string>
</resources>
