<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TableLayout
        android:id="@+id/gameInfo_Table"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:id="@+id/gameName_Row"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/gameName_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/game_name_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

            <EditText
                android:id="@+id/gameName_editText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:text="@string/game_name_default" />
        </TableRow>

        <TableRow
            android:id="@+id/playerNumber_Row"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/playerNumber_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_of_players_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

            <EditText
                android:id="@+id/playerNumber_editText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:text="@string/player_num_default" />
        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/cancel_Button_create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/create_Button_create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_game_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>