<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#dbdbda">

    <Space
        android:id="@+id/top_spacer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/login_table"/>

    <TableLayout
        android:id="@+id/login_table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/bottom_spacer"
        app:layout_constraintTop_toBottomOf="@id/top_spacer">

        <TableRow
            android:id="@+id/port_row"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp">

            <TextView
                android:id="@+id/port_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/port" />

            <EditText
                android:id="@+id/port_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="13"
                android:inputType="text"
                android:text="@string/port_number" />
        </TableRow>

        <TableRow
            android:id="@+id/host_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">

            <TextView
                android:id="@+id/host_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/host" />

            <EditText
                android:id="@+id/host_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:text="@string/host_name" />
        </TableRow>

        <TableRow
            android:id="@+id/user_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">

            <TextView
                android:id="@+id/userName_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username" />

            <EditText
                android:id="@+id/userName_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:text="@string/username_default" />

        </TableRow>

        <TableRow
            android:id="@+id/password_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">

            <TextView
                android:id="@+id/password_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password" />

            <EditText
                android:id="@+id/password_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword"
                android:text="@string/hint" />
        </TableRow>

        <LinearLayout
            android:id="@+id/button_row"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:gravity="center">

            <Button
                android:id="@+id/login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#6E98BA"
                android:padding="10dp"
                android:text="@string/login"
                android:layout_marginEnd="12dp"/>

            <Button
                android:id="@+id/register_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#6E98BA"
                android:padding="10dp"
                android:text="@string/register"
                android:layout_marginStart="12dp"/>


        </LinearLayout>

    </TableLayout>

    <Space
        android:id="@+id/bottom_spacer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_table"
        tools:layout_editor_absoluteX="411dp" />

</android.support.constraint.ConstraintLayout>